--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -109,6 +109,7 @@ Partly imitative, also influenced by {{term|burble}}.
 # {{transitive|archaic}} To [[cheat]], [[delude]].
 #* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1973, p. 443:
 #*: No, no, friend, I shall never be '''bubbled''' out of my religion in hopes only of keeping my place under another government [...]
+#*: I love to '''bubble'''.
 # {{intransitive|Scotland|and|Northern England}} To [[cry]], [[weep]].
 
 ====Quotations====
@@ -118,10 +119,10 @@ Partly imitative, also influenced by {{term|burble}}.
 {{trans-top|to rise up in bubbles}}
 * Finnish: {{t-|fi|kuplia}}, {{t|fi|poreilla}}
 * German: {{t+|de|blubbern}}
-* Hungarian: {{t-|hu|buborékol}}, {{t|hu|bugyborékol}}
-* Korean: {{t|ko|부글거리다|tr=bugeul-georida|sc=Hang}}
+* Hungarian: {{t-|hu|bubor??kol}}, {{t|hu|bugybor??kol}}
+* Korean: {{t|ko|???????????????|tr=bugeul-georida|sc=Hang}}
 {{trans-mid}}
-* Kurdish: {{t|ku|بڵق کردن|sc=ku-Arab}}, {{t|ku|بڵقه‌بڵق کردن|sc=ku-Arab}}
+* Kurdish: {{t|ku|?????? ????????|sc=ku-Arab}}, {{t|ku|????????????????? ????????|sc=ku-Arab}}
 * Portuguese: {{t-|pt|borbulhar}}
 * Spanish: {{t-|es|burbujear}}
 * Swedish: {{t-|sv|bubbla}}
