--- a/en/i/Ionia.775850.wikitext
+++ b/en/i/Ionia.775850.wikitext
@@ -8,3 +8,5 @@ From {{etyl|grc}} ''[[Ἰωνία]]''.
 {{en-proper noun}}
 
 # {{historical}} An Ancient Greek settlement on the west coast of [[Asia Minor]] inhabited by the [[Ionian]]s, one of the four main [[Hellenic]] tribes.
+
+[[fi:Ionia]]
