/* Translations */ Egyptian arabic <thing#6390017>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -43,7 +43,8 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 {{trans-top|a separate entity or concept}}
 * [[Afrikaans]]: {{t|af|ding}}
 * Albanian: {{t-|sq|send|m|xs=Albanian}}
-* Arabic: {{Arab|[[شيء]]}} (šæy’) {{m}}
+* Arabic: {{t|ar|شيء|m|sc=Arab|tr=šáee’}}
+*: Egyptian Arabic: {{t|arz|حاجة|f|sc=Arab|tr=Haaga}}
 * Armenian: {{t|hy|իր|sc=Armn|tr=ir}}, {{t|hy|բան|sc=Armn|tr=ban}}
 * [[Basque]]: [[gauza]]
 * Belarusian: {{t|be|рэч|f}}
