--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -27,7 +27,7 @@
 * Icelandic: {{t+|is|sjá}}
 * Italian: {{t+|it|guardare}}
 * [[Macedonian]]: [[Гледа]], [[Следи]]
-* Portuguese: {{t+|pt|olhar}}
+* Portuguese: {{t+|pt|ver}}, {{t+|pt|contemplar}}
 * Russian: {{t+|ru|смотреть|sc=Cyrl}}, {{t+|ru|глядеть|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[amhairc]]
 * Serbian: [[posmatrati]], [[gledati]]
