/* Adjective */ +sense <Walrasian#6397598>

--- a/en/w/Walrasian.776650.wikitext
+++ b/en/w/Walrasian.776650.wikitext
@@ -4,6 +4,7 @@
 {{en-adj}}
 
 # {{economics}} Of or pertaining to the theories of the 19th century French [[economist]] {{w|Léon Walras}}.
+# {{economics}} Relating to a [[tatonnement]] process for achieving exchange equilibrium.
 
 ====Related terms====
 *{{w|Walrasian auction}}
