--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -35,7 +35,7 @@ From {{etyl|ang}} ''[[bindan]]''.
 * Indonesian: [[ikat]], [[sambung]], [[hubung]]
 * Italian: to connect: [[legare]], to couple: [[connettere]], to produce a book: [[rilegare]]
 * Japanese: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru)
-* Portuguese: [[conectar]]
+* Portuguese: [[conectar]],[[juntar]], [[copular]], [[ligar]]
 * Spanish: [[atar]] (tie), [[empastar]] (books)
 {{trans-bottom}}
 * Romanian: [[cuplare]] , [[conectare]] , [[legare]]
