rm tag, sorted/rebalanced translations <aziridine#6408109>

--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -6,37 +6,39 @@
 [[aza-]] + [[-iridine]].  [[aza|Aza]] denotes a [[monocycle]] with a single nitrogen atom, and [[iridine]] is used to mark a three-membered monocycle.
 
 ===Pronunciation===
-*{{IPA|əˈzirɪdin}}
+* {{IPA|əˈzirɪdin}}
 
 ===Noun===
 {{wikipedia}}
 {{en-noun}}
+
 # {{organic compound}} A three-membered [[heterocycle]] containing two [[methylene]] groups and an [[imine]]; the nitrogen equivalent of [[ethylene oxide]].
 # {{by extension}} Any [[derivative]] of this basic structure.
 
 ====Translations====
 {{trans-top|three-membered heterocycle}}
-*Chinese: [[氮丙啶]] (dànbǐngdìng)
-*Finnish: [[etyleeni-imiini]]
-*German: [[Ethylenimin]] {{n}}
-*Korean: [[에틸렌이민]] (etillenimin)
+* Chinese: [[氮丙啶]] (dànbǐngdìng)
+* Finnish: [[etyleeni-imiini]]
+{{trans-mid}}
+* German: [[Ethylenimin]] {{n}}
+* Korean: [[에틸렌이민]] (etillenimin)
 {{trans-bottom}}
 
 ====Synonyms====
-*[[ethyleneimine]]
-*[[azacyclopropane]]
+* [[ethyleneimine]]
+* [[azacyclopropane]]
 
 ====Related terms====
-*[[azetidine]], an analogous four-membered heterocycle
-*[[azolidine]], an analogous five-membered heterocycle
-
-[[zh:aziridine]]
+* [[azetidine]], an analogous four-membered heterocycle
+* [[azolidine]], an analogous five-membered heterocycle
 
 ----
+
 ==Italian==
 
 ===Noun===
 '''aziridine''' {{f}}
 
 # {{plural of|[[aziridina]]|lang=Italian}}
-{{rfc-auto}}
+
+[[zh:aziridine]]
