--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -22,7 +22,7 @@
 * Bosnian: [[votka#Bosnian|votka]] {{f}}
 * Bulgarian: [[водка]] (vódka) {{f}}
 * [[Catalan]]: vodka {{f}}
-* Chinese: [[伏特加酒]] (fú tè jiā jiǔ)
+* Chinese: [[伏特加酒]] (fútèjiā-jiǔ), [[伏特加]] (fútèjiā)
 * Czech: vodka {{f}}
 * Danish: vodka {{c}}
 * Dutch: [[wodka]] {{m}}
