--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -40,7 +40,7 @@
 * [[Afrikaans]]: [[eiland]]
 * [[Ainu]]: [[モシリ|モシㇼ]] (''moshir'')
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
-* Amharic: {{tø|am|ደሴት|tr=''däset''|sc=Ethi}}
+* [[Amharic]]: {{tø|am|ደሴት|tr=''däset''|sc=Ethi}}
 * Arabic: {{Arab|[[جزيرة|جَزِيرَة]]}} (jazeera) {{f}}
 * [[Aragonese]]: [[isla]] {{f}}
 * Aramaic:
@@ -92,8 +92,8 @@
 * Japanese: [[島]] ([[しま]], ''shimá'')
 * {{trreq|Kannada}}
 * [[Khmer]]: {{Khmr|[[កោះ]]}} (''goh'')
-* Korean: [[섬]] (seom)
 {{trans-mid}}
+* Korean: [[섬]] (seom)
 * Lao: {{t-|lo|ດອນ|tr=''döön''|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|insula|f}}
 * Latvian: {{t+|lv|sala|f|xs=Latvian}}
