t+la:[[vodca]] t-balance t+lv:[[degvīns]] t+bat-smg:[[arielka]] t+el:[[βότκα]] t+he:[[וודקה]] t+bat-smg:[[degtėnė]] ([[User_talk:Conrad.Irwin/editor.js|Assisted]]) <vodka#6427969>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -32,17 +32,22 @@
 * Finnish: [[votka]]
 * French: vodka {{f}}
 * German: [[Wodka]] {{m}}
+* Greek: {{t|el|βότκα|f|tr=vótka|sc=Grek}}
+* Hebrew: {{t|he|וודקה|f|tr=vodka|alt=ווֹדְקָה|sc=Hebr}}
 * Irish: [[vodca]] {{m}}
 * Italian: vodka {{f}}
-{{trans-mid}}
 * Japanese: [[ウオッカ]] (uokka)
+{{trans-mid}}
 * Korean: [[보드카]] bodeuka
+* Latin: {{t|la|vodca}}
+* Latvian: {{t|lv|degvīns}}
 * Lithuanian: [[degtinė]] {{f}}
 * Norwegian: vodka {{c}}
 * Polish: [[wódka]] {{f}}
 * Portuguese: [[vodca]] {{f}}
 * Romanian: [[vodcă]] {{f}}
 * Russian: [[водка]] (vódka) {{f}}
+* [[Samogitian]]: {{tø|bat-smg|arielka|f}},  {{tø|bat-smg|degtėnė|f}}
 * Serbian:
 *: Cyrillic: [[вотка#Serbian|вотка]] {{f}}
 *: Roman: [[votka#Serbian|votka]] {{f}}
