--- a/en/r/Rayne.774571.wikitext
+++ b/en/r/Rayne.774571.wikitext
@@ -3,4 +3,4 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# A [[surname]], variant of [[Raine]]
+# {{surname|from=given names|dot=}}, variant of [[Raine]].
