iwiki +[[:sw:whistle]] <whistle#6437033>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -151,6 +151,7 @@
 [[id:whistle]]
 [[it:whistle]]
 [[kk:whistle]]
+[[sw:whistle]]
 [[hu:whistle]]
 [[ja:whistle]]
 [[oc:whistle]]
@@ -161,6 +162,6 @@
 [[sv:whistle]]
 [[ta:whistle]]
 [[te:whistle]]
-[[vi:whistle]]
 [[uk:whistle]]
+[[vi:whistle]]
 [[zh:whistle]]
