synonyms <terrestrial planet#6442452>

--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -5,3 +5,8 @@
 {{en-noun|sg=[[terrestrial]] [[planet]]}}
 
 # {{planet}} Any planet of the [[solar system]] or any [[exoplanet]] which is "[[Earth]][[-like]]" in the sense that it is composed primarily of [[metal]]s and [[rock]], in contrast to a planet which is a [[gas giant]].
+
+====Synonyms====
+* [[rocky planet]]
+* [[telluric planet]]
+* [[inner planet]]
