--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -18,6 +18,7 @@ From {{etyl|fro}} ''[[plege]]'' (French: ''[[pleige]]'').
 
 ====Translations====
 {{trans-top|to make a solemn promise}}
+* Chinese: [[发誓]] (fāshì)
 * Finnish: {{t+|fi|luvata}}, {{t+|fi|sitoutua}}
 * French: {{t+|fr|promettre}}
 * German: {{t-|de|zusichern}}, {{t+|de|versprechen}}
