--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -40,15 +40,19 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 
 ====Translations====
 {{trans-top|to shape into a curve}}
+* Arabic: {{t|ar|ثنى|tr=thanaa|sc=Arab}}
 * Czech: {{t-|cs|ohnout}}
 * Dutch: {{t+|nl|buigen}}, {{t|nl|plooien}}
 * Finnish: {{t+|fi|taivuttaa}}
 * German: {{t+|de|beugen}}
 * Hebrew: [[לכופף]] (le'khofef)
-{{trans-mid}}
 * Hungarian: {{t+|hu|hajlít}}, {{t-|hu|görbít}}
+{{trans-mid}}
 * Italian: {{t+|it|curvare}}, {{t+|it|piegare}}
+* Japanese: {{t|ja|曲げる|tr=mageru|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[چه‌ماندن]]}}
+* Mandarin: {{t|zh|屈|tr=qū}},  {{t|zh|弯|tr=wān}}
+* Russian: {{t|ru|сгибать|tr=sgibát'|sc=Cyrl}},  {{t|ru|изгибать|tr=izgibát'|sc=Cyrl}},  {{t|ru|гнуть|tr=gnut'|sc=Cyrl}}
 * Slovene: [[upogniti]]
 * Spanish: {{t-|es|doblar}}, {{t-|es|curvar}}
 {{trans-bottom}}
