--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -24,18 +24,21 @@ From {{etyl|ang}} ''[[bindan]]''.
 
 ====Translations====
 {{trans-top|connect}}
+* Arabic: {{t|ar|ربط|tr=rabaTa|sc=Arab}}
 * [[Crimean Tatar]]: [[bint#Crimean Tatar|bint]]
 * Czech: [[vázat]] (''by a promise'')
 * Dutch: [[binden]], [[verbinden]], [[koppelen]]
 * Finnish: [[sitoa]], [[yhdistää]]
 * French: [[relier]] (livre)
 * German: [[verbinden]] (1,2), [[konnektieren]] (1)
-{{trans-mid}}
 * [[Ido]]: [[bindar]]
+{{trans-mid}}
 * Indonesian: [[ikat]], [[sambung]], [[hubung]]
 * Italian: to connect: [[legare]], to couple: [[connettere]], to produce a book: [[rilegare]]
-* Japanese: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru)
+* Japanese: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru),  {{t|ja|縛る|tr=shibaru|sc=Jpan}},  {{t|ja|結ぶ|tr=musubu|sc=Jpan}}
+* Mandarin: {{t|zh|捆|tr=kǔn}}
 * Portuguese: [[conectar]],[[juntar]], [[copular]], [[ligar]]
+* Russian: {{qualifier|imperfective}} {{t|ru|вязать|tr=vjazát'|sc=Cyrl}},  {{qualifier|imperfective}} {{t|ru|связывать|tr=svjázyvat'|sc=Cyrl}},  {{qualifier|perfective}} {{t|ru|связать|tr=svjazát'|sc=Cyrl}}
 * Spanish: [[atar]] (tie), [[empastar]] (books)
 * Romanian: [[cuplare]] , [[conectare]] , [[legare]]
 {{trans-bottom}}
