--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -28,7 +28,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 ====Translations====
 {{trans-top|lose blood}}
 * [[American Sign Language]]: {{tø|ase|4@Nose-PalmBackFingerAcross Wiggle 4@NearNeck-PalmBackFingerAcross|xs=American Sign Language}}
-* Arabic: {{Arab|[[ينزف]]}}
+* Arabic: {{Arab|[[ينزف]]}},  {{t|ar|نزف|tr=nazafa|sc=Arab}}
 * Armenian: {{t-|hy|արյունահոսել|tr=aryunahosel|sc=Armn|xs=Armenian}}
 * {{trreq|Basque}}
 * Czech: {{t-|cs|krvácet}}
