--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -28,9 +28,10 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 ====Translations====
 {{trans-top|lose blood}}
 * [[American Sign Language]]: {{tø|ase|4@Nose-PalmBackFingerAcross Wiggle 4@NearNeck-PalmBackFingerAcross|xs=American Sign Language}}
-* Arabic: {{Arab|[[ينزف]]}},  {{t|ar|نزف|tr=nazafa|sc=Arab}}
+* Arabic: {{t|ar|نزف|tr=nazafa|sc=Arab}}
 * Armenian: {{t-|hy|արյունահոսել|tr=aryunahosel|sc=Armn|xs=Armenian}}
 * {{trreq|Basque}}
+* Chinese: {{t|zh|流血|tr=liúxuè}}
 * Czech: {{t-|cs|krvácet}}
 * Danish: {{t-|da|bløde}}
 * Dutch: {{t+|nl|bloeden}}
