--- a/en/q/quadrupedal.4321.wikitext
+++ b/en/q/quadrupedal.4321.wikitext
@@ -13,6 +13,7 @@ From ''[[quadruped]]'' + ''[[-al]]''.
 *Dutch: [[viervoetig]]
 {{trans-mid}}
 *German: [[vierfüßig]]
+* Swedish: {{t|sv|fyrbent}},  {{t|sv|fyrfota}},  {{t|sv|fyrfotad}}
 {{trans-bottom}}
 
 ===See also===
