--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -280,6 +280,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 [[ja:blow]]
 [[oc:blow]]
 [[pl:blow]]
+[[pt:blow]]
 [[ru:blow]]
 [[simple:blow]]
 [[fi:blow]]
@@ -287,7 +288,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 [[ta:blow]]
 [[te:blow]]
 [[th:blow]]
-[[vi:blow]]
 [[tr:blow]]
 [[uk:blow]]
+[[vi:blow]]
 [[zh:blow]]
