--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -21,6 +21,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * Danish: {{t|da|bedre sent end aldrig}}
 * Dutch: {{t|nl|beter laat dan nooit}}
 * Esperanto: {{t|eo|pli bone malfrue ol neniam|xs=Esperanto}}
+* Finnish: {{t|fi|parempi myöhään kuin ei milloinkaan}}
 {{trans-mid}}
 * French: {{t|fr|mieux vaut tard que jamais}}
 * German: {{t|de|besser spät als nie}}
