--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -86,6 +86,7 @@
 * Hindi: {{t-|hi|द्वीप|sc=Deva|xs=Hindi}}
 * Hungarian: {{t+|hu|sziget}}
 * Icelandic: {{t+|is|ey|f}}, {{t+|is|eyja}}
+* [[Ido]]: {{t+|io|insulo}}
 * [[Ilocano]]: [[puro]]
 * Indonesian: {{t+|id|pulau|xs=Indonesian}}, {{t-|id|nusa|xs=Indonesian}}
 * Irish: {{t|ga|oileán|m|xs=Irish}}, {{t-|ga|inis|f|xs=Irish}}
@@ -183,7 +184,6 @@
 * {{ttbc|Fijian}}: [[yanuyanu]]
 * {{ttbc|Ancient Greek}}: [[νήσος]] (''nísos'') {{f}}
 * {{ttbc|Icelandic}}: [[eyja]], [[eyland]]
-* {{ttbc|Ido}}: [[insulo]]
 * {{ttbc|Ilocano}}: [[puro]]
 * {{ttbc|Indonesian}}: [[pulau]], [[nusa]]
 * {{ttbc|Interlingua}}: [[insula]]
