--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -161,32 +161,33 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 
 # {{obsolete}} [[ready|Ready]], [[prepared]].
 # Ready to start or go (to); moving in the direction (of).
-#: ''Is that message '''bound''' for me?''
 #: ''Which way are you '''bound'''?''
+#: ''Is that message '''bound''' for me?''
+
+=====Derived terms=====
+{{rel-top|terms derived from the adjective ''bound'' ("moving in the direction of")}}
+* [[-bound]]
+{{rel-mid}}
+* [[bound for]]
+{{rel-bottom}}
 
 =====Translations=====
-{{trans-top|Ready, prepared}}
+{{trans-top|obsolete: ready, prepared}}
 * Dutch: {{t+|nl|bereid}}
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|Ready to start or go (to); moving in the direction (of)}}
+{{trans-top|ready to start or go (to); moving in the direction (of)}}
 * Dutch: [[bestemd]] (voor)
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|Constrained by something, or constrained to something}}
+{{trans-top|constrained by something, or constrained to something}}
 * Danish: {{t|da|begrænset}}
 {{trans-mid}}
 * Finnish: [[sidottu]]
 {{trans-bottom}}
 
-=====Derived terms=====
-{{rel-top|terms derived from bound (moving in the direction of)}}
-* [[-bound]]
-{{rel-mid}}
-* [[bound for]]
-{{rel-bottom}}
 
 [[Category:Contranyms]]
 [[Category:English irregular past participles]]
