--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -72,6 +72,7 @@
 {{trans-top|expressing joy}}
 * Finnish: [[jee]]
 {{trans-mid}}
+* Japanese: {{t|ja|やった！|sc=Jpan}}
 {{trans-bottom}}
 
 ===See also===
