--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -43,7 +43,7 @@
 * Indonesian: [[toya]]
 * Italian: {{t+|it|bastone|m}}
 * Portuguese: {{t+|pt|bengala|f}}
-* Scottish Gaelic: {{t|gd|bata|m}}
+* [[Scottish Gaelic]]: {{t|gd|bata|m}}
 * Spanish: {{t-|es|bastón|m}}, {{t+|es|báculo|m}}
 {{trans-bottom}}
 
