iwiki +[[:sw:division]] <division#6468708>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -197,6 +197,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 [[id:division]]
 [[it:division]]
 [[kk:division]]
+[[sw:division]]
 [[hu:division]]
 [[pl:division]]
 [[pt:division]]
@@ -206,6 +207,6 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 [[sv:division]]
 [[ta:division]]
 [[te:division]]
-[[vi:division]]
 [[uk:division]]
+[[vi:division]]
 [[zh:division]]
