--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -1,12 +1,13 @@
 ==English==
+[[Image:Cocacola-5cents-1900 edit1.jpg|thumb|A [[Coca-Cola]] advertisement from the 1890s]]
 
 ===Etymology===
 {{suffix|advertise|ment}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/}}, {{SAMPA|/@d"v3:tIsm@nt/}}
-* {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/}}, {{SAMPA|/{"dv@`%taIzm@nt/}}
 * {{audio|Advertisement.ogg|Audio (UK)}}
+* {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/}}, {{SAMPA|/{"dv@`%taIzm@nt/}}
 * {{audio|en-us-advertisement.ogg|Audio (US)}}
 * {{hyphenation|ad|ver|tise|ment}}
 
@@ -22,6 +23,13 @@
 ====Synonyms====
 * [[ad]]
 * [[advert]]
+
+====Derived terms====
+* [[ad]]
+* [[advert]]
+* [[classified advertisement]]
+* [[pop-up advertisement]]
+* [[classified advertisements]]
 
 ====Hyponyms====
 * [[commercial]]
