--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -8,6 +8,7 @@
 '''bitten'''
 
 # {{past participle of|[[bite]]}}
+#*''My dog has never '''bitten''' anyone before.''
 
 [[Category:English irregular past participles]]
 
