/* Noun */ <Watergate salad#6479860>

--- a/en/w/Watergate salad.855389.wikitext
+++ b/en/w/Watergate salad.855389.wikitext
@@ -4,4 +4,4 @@
 {{en-noun}}
 {{wikipedia}}
 
-#A sweet-tasting dessert [[salad]] made from combining [[pistachio]]-flavoured instant pudding, whipped topping, crushed pineapple, and small marshmallows, and possibly other ingredients.
+#A sweet-tasting dessert [[salad]] made by combining [[pistachio]]-flavoured instant pudding, whipped topping, crushed pineapple, and small marshmallows, and possibly other ingredients.
