--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-# Term was used by American bison hunters to describe the act of shooting a large number of buffalo in a short period of time.
+Term was used by American bison hunters to describe the act of shooting a large number of buffalo in a short period of time.
 
 ===Verb===
 {{infl|en|verb|head=to [[make]] [[a]] [[killing]]}}
