--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -72,6 +72,16 @@ MAAHX-im-muhm
 
 ----
 
+==French==
+
+===Noun===
+{{fr-noun|m}}
+
+# [[#English|maximum]]
+
+====Derived terms====
+*[[maximal#French|maximal]]
+----
 ==Latin==
 
 ===Etymology===
