--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -71,6 +71,15 @@
 
 ----
 
+==French==
+
+===Noun===
+{{fr-noun|f}}
+
+# [[vodka#English|vodka]]
+
+[[Category:fr:Alcoholic beverages]]
+----
 ==Italian==
 {{wikipedia|lang=it}}
 
