/* English */ +language division and improvements <gagaku#6489432>

--- a/en/g/gagaku.801689.wikitext
+++ b/en/g/gagaku.801689.wikitext
@@ -1,9 +1,16 @@
 ==English==
 {{wikipedia|Gagaku}}
+===Etymology===
+From {{etyl|ja}} [[雅楽]] (gagaku)
 ===Noun===
-'''[[雅樂]]''' (hiragana: [[ががく]])
-#the ancient court ritual music of Japan, of Chinese and Korean origin
+{{en-noun|-}}
 
-[[Category:English nouns]]
+# the ancient court ritual music of Japan, of Chinese and Korean origin
 
-{{ja-attention}}
+----
+
+==Japanese==
+===Noun===
+{{ja-noun|r|hira=ががく|hidx=かがく}}
+
+# {{ja-def|雅樂|雅楽}} [[gagaku#English|gagaku]]
