--- a/en/c/CD-RW.26222.wikitext
+++ b/en/c/CD-RW.26222.wikitext
@@ -1,12 +1,24 @@
 ==English==
 
-==={{initialism}}===
-'''CD-RW''' ''or'' '''CD/RW'''
+===Alternative spellings===
+*[[CD/RW]]
 
-# Compact Disk - Read Writeable.  A form of digital media that is based on the use of a laser to read from a plastic disc.  It can be written to multiple times.
+==={{initialism}}===
+{{en-noun|sg=[[CD]]-[[RW]]}}
+
+# [[compact disk|Compact Disk]] - Read [[writable|Writable]].  A form of digital media that is based on the use of a laser to read from a plastic disc.  It can be written to multiple times.
+
+====Synonym====
+*{{sense|Compact Disk - Read Writable}} [[CD-E]] {{i|dated}}
+
+====See also====
+*{{pedialite}}
 
 ====Translations====
+{{trans-top|Compact Disk - Read Writable}}
+{{trans-mid}}
 *Serbian: piši-briši cede
+{{trans-bottom}}
 
 [[et:CD-RW]]
 [[ko:CD-RW]]
