--- a/en/c/CD-RW.26222.wikitext
+++ b/en/c/CD-RW.26222.wikitext
@@ -1,23 +1,23 @@
 ==English==
 
 ===Alternative spellings===
-*[[CD/RW]]
+* [[CD/RW]]
 
 ==={{initialism}}===
 {{en-noun|sg=[[CD]]-[[RW]]}}
 
 # [[compact disk|Compact Disk]] - Read [[writable|Writable]].  A form of digital media that is based on the use of a laser to read from a plastic disc.  It can be written to multiple times.
 
-====Synonym====
-*{{sense|Compact Disk - Read Writable}} [[CD-E]] {{i|dated}}
+====Synonyms====
+* {{sense|Compact Disk - Read Writable}} [[CD-E]] {{i|dated}}
 
 ====See also====
-*{{pedialite}}
+* {{pedialite}}
 
 ====Translations====
 {{trans-top|Compact Disk - Read Writable}}
+* Serbian: piši-briši cede
 {{trans-mid}}
-*Serbian: piši-briši cede
 {{trans-bottom}}
 
 [[et:CD-RW]]
