/* Noun */ Finnish translations <trash can#6502776>

--- a/en/t/trash can.775500.wikitext
+++ b/en/t/trash can.775500.wikitext
@@ -9,6 +9,12 @@
 # A [[receptacle]] which serves as a place to [[discard]] [[waste]] materials.
 
 ====Synonyms====
-*[[litter bin]]
-*[[rubbish bin]]
-*[[wastepaper basket]]
+* [[litter bin]]
+* [[rubbish bin]]
+* [[wastepaper basket]]
+
+====Translations====
+{{trans-top|receptacle for waste materials}}
+* Finnish: {{t|fi|jäteastia}}, {{t|fi|roskakori}}, {{t|fi|roskapönttö}}
+{{trans-mid}}
+{{trans-bottom}}
