--- a/en/t/trash can.775500.wikitext
+++ b/en/t/trash can.775500.wikitext
@@ -15,6 +15,8 @@
 
 ====Translations====
 {{trans-top|receptacle for waste materials}}
+* Dutch: {{t|nl|vuilnisbak|m}}
 * Finnish: {{t|fi|jäteastia}}, {{t|fi|roskakori}}, {{t|fi|roskapönttö}}
 {{trans-mid}}
+* Spanish: {{t|es|tacho de basura|m}}
 {{trans-bottom}}
