iwiki +[[:ml:pig]] <pig#6509911>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -327,6 +327,7 @@ From English ''[[pig#English|pig]]''.
 [[lo:pig]]
 [[lt:pig]]
 [[hu:pig]]
+[[ml:pig]]
 [[nl:pig]]
 [[ja:pig]]
 [[no:pig]]
@@ -342,7 +343,7 @@ From English ''[[pig#English|pig]]''.
 [[ta:pig]]
 [[te:pig]]
 [[th:pig]]
-[[vi:pig]]
 [[tr:pig]]
 [[uk:pig]]
+[[vi:pig]]
 [[zh:pig]]
