making Chaucer a wiki link, Replaced: [[Chaucer]] → [[w:Geoffrey Chaucer|]] using [[Project:AutoWikiBrowser|AWB]] <accusement#6510602>

--- a/en/a/accusement.34083.wikitext
+++ b/en/a/accusement.34083.wikitext
@@ -9,7 +9,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{obsolete}} [[accusation]] {{i|[[Chaucer]]}}
+# {{obsolete}} [[accusation]] {{i|[[w:Geoffrey Chaucer|Geoffrey Chaucer]]}}
 
 ====References====
 * {{R:1913}}
