--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -51,6 +51,7 @@
 [[gl:subtraction]]
 [[io:subtraction]]
 [[id:subtraction]]
+[[it:subtraction]]
 [[hu:subtraction]]
 [[pl:subtraction]]
 [[pt:subtraction]]
