--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -41,6 +41,7 @@
 * Latin: [[capere]]
 * Norwegian: [[gripe]]
 * Old English: [[niman]]
+* [[Ottoman Turkish]]: {{tø|ota|استولى على }}
 * Portuguese: [[agarrar]], [[capturar]]
 * Russian: [[захватывать]] (zaχvátyvat’)
 * Spanish: [[agarrar]]
