--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -26,7 +26,7 @@
 ====Translations====
 {{trans-top|grab}}
 * Arabic: {{Arab|[[استولى على]]}} (’istáula 3ála)
-* Chinese: [[捕抓]] (bǔzhuā)
+* Chinese: [[捕抓]] (bǔzhuā), {{t|zh|攫取|tr=juéqǔ|sc=Hans}},  {{t|zh|捉|tr=zhuō|sc=Hans}},  {{t|zh|攫|tr=jué|sc=Hans}}
 * Chinese Characters: [[揢]]
 * Danish: {{t|da|gribe}}
 * Dutch: {{t|nl|grijpen}}, {{t|nl|vangen}}, {{t|nl|pakken}}
@@ -39,12 +39,11 @@
 {{trans-mid}}
 * Korean: [[붙잡다]] (butjapda)
 * Latin: {{t|la|capere}}
-* Mandarin: {{t|zh|攫取|tr=juéqǔ|sc=Hans}},  {{t|zh|捉|tr=zhuō|sc=Hans}},  {{t|zh|攫|tr=jué|sc=Hans}}
 * Norwegian: {{t|no|gripe}}
 * Old English: [[niman]]
 * [[Ottoman Turkish]]: {{tø|ota|استولى على|sc=ota-Arab|tr=istevli ele}}
 * Portuguese: {{t|pt|agarrar}}, {{t|pt|capturar}}
-* Russian: {{t|ru|захватывать|tr=zaxvátyvat’}},  {{t|ru|захватить|tr=zaxvatít’|sc=Cyrl}},  {{t|ru|схватывать|tr=sxvátyvat’|sc=Cyrl}},  {{t|ru|схватить|tr=sxvatít’|sc=Cyrl}}
+* Russian: {{t|ru|захватывать|tr=zaxvátyvat’}} {{impf}},  {{t|ru|захватить|tr=zaxvatít’|sc=Cyrl}} {{pf}},  {{t|ru|схватывать|tr=sxvátyvat’|sc=Cyrl}} {{impf}},  {{t|ru|схватить|tr=sxvatít’|sc=Cyrl}} {{pf}}
 * Spanish: {{t|es|agarrar}}
 * Swedish: {{t|sv|gripa}}, {{t|sv|fånga}}
 {{trans-bottom}}
