--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -1,15 +1,46 @@
 ==English==
-{{wikipedia}}
 
 ===Pronunciation===
 * {{a|US}} {{IPA|/wɑːˈhɑː.kɑː/|/wəˈhɑː.kɑː/}}
-{{rfap}}
+* {{audio|Es-Oaxaca.ogg|Audio}}
+
+===Etymology===
+{{etyl|nah}} {{term|Huaxyacac|Huāxyacac|place of guaje trees}}.
 
 ===Proper noun===
 {{en-proper-noun}}
 
 # One of the 31 [[states]] of [[Mexico]], formally the Free and Sovereign State of Oaxaca,  located in the southern part of the country, west of the Isthmus of Tehuantepec.
 # The largest [[city]] in the state of Oaxaca, for which the state is named.
+
+====Translations====
+{{trans-top|state of Mexico}}
+*Spanish: {{t|es|Oaxaca|f}}
+{{trans-mid}}
+{{trans-bottom}}
+{{trans-top|city}}
+*Spanish: {{t|es|Oaxaca de Juárez|f}}, {{t|es|Oaxaca|f}}
+{{trans-mid}}
+{{trans-bottom}}
+
+[[Category:States of Mexico]]
+
+----
+
+==Spanish==
+
+===Etymology===
+{{etyl|nah|es}} {{term|Huaxyacac|Huāxyacac|place of guaje trees}}.
+
+===Proper noun===
+{{es-proper noun|f}}
+
+# A state of [[Mexico]].
+
+===See also===
+* {{pedialite|lang=es}}
+
+[[Category:es:States of Mexico]]
 
 [[es:Oaxaca]]
 [[fr:Oaxaca]]
