--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -26,7 +26,7 @@
 ====Translations====
 {{trans-top|grab}}
 * Arabic: {{Arab|[[استولى على]]}} (’istáula 3ála)
-* Chinese: [[捕抓]] (bǔzhuā), {{t|zh|攫取|tr=juéqǔ|sc=Hans}},  {{t|zh|捉|tr=zhuō|sc=Hans}},  {{t|zh|攫|tr=jué|sc=Hans}}
+* Chinese: {{t|zh|捕抓|tr=bǔzhuā|sc=Hans}}, {{t|zh|攫取|tr=juéqǔ|sc=Hans}},  {{t|zh|捉|tr=zhuō|sc=Hans}},  {{t|zh|攫|tr=jué|sc=Hans}}
 * Chinese Characters: [[揢]]
 * Danish: {{t|da|gribe}}
 * Dutch: {{t|nl|grijpen}}, {{t|nl|vangen}}, {{t|nl|pakken}}
@@ -35,7 +35,7 @@
 * German: {{t|de|ergreifen}}
 * Hungarian: {{t|hu|megfog}}, {{t|hu|megragad}}
 * Italian: {{t|it|prendere}}
-* Japanese: [[捉える]] (とらえる, toraeru),  {{t|ja|つかむ|tr=tsukamu|sc=Jpan}}
+* Japanese: {{t|ja|捉える|tr=とらえる, toraeru|sc=Jpan}},  {{t|ja|つかむ|tr=tsukamu|sc=Jpan}}
 {{trans-mid}}
 * Korean: [[붙잡다]] (butjapda)
 * Latin: {{t|la|capere}}
