--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -94,6 +94,7 @@ Old English ''[[leþer]]''
 * Bosnian: {{t-|bs|kožni|m}}
 * Dutch: {{t+|nl|leren}}
 * Finnish: [[nahka]]-, [[nahkainen]]
+* Persian: {{t|fa|چرمی|tr=charmi|sc=fa-Arab}}
 * Polish: [[skórzany]] {{m}}, [[skórzana]] {{f}}, [[skórzane]] {{n}}
 * Russian: {{t|ru|кожаный|tr=kóžanyj|sc=Cyrl}}
 {{trans-mid}}
