--- a/en/r/rudesby.774528.wikitext
+++ b/en/r/rudesby.774528.wikitext
@@ -1,8 +1,14 @@
 ==English==
+
 ===Etymology===
 [[rude]] + [[-sby]] (as in various names)
 
 ===Noun===
 {{en-noun}} 
 
-# (archaic) a [[rude]] person
+# {{archaic}} A [[rude]] person
+#:''There is no way in hell my sons will grew up to become '''rudesbys''' like you, Sir, said Mr. Right while he rudely spanked Ricky and Rudy on the bare for writing the replies the '''rudesby''' complained about in equally rude terms as his original letters
+
+====Related terms====
+* [[rudely]]
+* [[rudeness]]
