--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -204,6 +204,7 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 [[io:rot]]
 [[it:rot]]
 [[ky:rot]]
+[[sw:rot]]
 [[ku:rot]]
 [[lo:rot]]
 [[lt:rot]]
