--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -1,5 +1,5 @@
 ==English==
-
+[[File:Mexico map, MX-OAX.svg|thumb|Map of [[Mexico]] highlighting Oaxaca]]
 ===Pronunciation===
 * {{a|US}} {{IPA|/wɑːˈhɑː.kɑː/|/wəˈhɑː.kɑː/}}
 * {{audio|Es-Oaxaca.ogg|Audio}}
@@ -36,6 +36,9 @@
 {{es-proper noun|f}}
 
 # A state of [[Mexico]].
+
+====Related terms====
+*[[oaxaqueño]
 
 ===See also===
 * {{pedialite|lang=es}}
