--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -106,6 +106,7 @@ From {{etyl|fro}} ''[[plege]]'' (French: ''[[pleige]]'').
 [[io:pledge]]
 [[it:pledge]]
 [[hu:pledge]]
+[[no:pledge]]
 [[ru:pledge]]
 [[fi:pledge]]
 [[ta:pledge]]
