--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -576,6 +576,7 @@ From {{etyl|en|fr}} ''[[#English|break]]''.
 [[hy:break]]
 [[io:break]]
 [[it:break]]
+[[sw:break]]
 [[ku:break]]
 [[lo:break]]
 [[hu:break]]
@@ -590,7 +591,7 @@ From {{etyl|en|fr}} ''[[#English|break]]''.
 [[ta:break]]
 [[te:break]]
 [[th:break]]
-[[vi:break]]
 [[tr:break]]
 [[uk:break]]
+[[vi:break]]
 [[zh:break]]
