/* Noun */ +Wikisaurus <cop#6578565>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -32,6 +32,9 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 
 # {{slang|law enforcement}} A [[police officer]].
 
+=====Synonyms=====
+* See also [[Wikisaurus:police officer]]
+
 =====Translations=====
 {{trans-top|A police officer}}
 * Hungarian: {{t-|hu|zsaru}}
