t+da:[[art]] ([[WT:EDIT|Assisted]]) <species#6585132>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -67,6 +67,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 ====Translations====
 {{trans-top|rank in a taxonomic classification}}
 * Czech: {{t+|cs|druh|m}}
+* Danish: {{t|da|art|c}}
 * Japanese: {{t+|ja|種|tr=shu|sc=Jpan}} ([[しゅ]])(''academic''), {{t+|ja|類|tr=rui|sc=Jpan}} ([[るい]]), {{t+|ja|種類|tr=shurui|sc=Jpan}} ([[しゅるい]])(''colloquial'')
 {{trans-mid}}
 * Polish: {{t+|pl|gatunek|m}}
