--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -14,14 +14,18 @@
 # {{transitive}} To deliberately take hold of; to [[grab]] or [[capture]].
 # {{transitive}} To take advantage of (an [[opportunity]] or [[circumstance]]).
 # {{intransitive}} To have a [[seizure]].
-# {{intransitive}} To [[bind]] or [[lock]] in position [[immovably]].
+# {{intransitive}} To [[bind]] or [[lock]] in position [[immovably]]; see also '''[[seize up]]'''.
 #: ''Rust caused the engine to '''seize''', never to run again.''
 
-====Related terms====
-* [[be seized of]]
-* [[be seized with]]
-* [[seizure]]
+====Derived terms====
+* [[be seized of]], [[be seized with]]
 * [[seize the day]]
+* [[seize on]], [[seize upon]]
+* [[seize up]]
+* [[seizer]]
+
+====Related terms====
+* [[seizure]]
 
 ====Translations====
 {{trans-top|grab}}
