formatting, def. only <TRAF#6587925>

--- a/en/t/TRAF.775541.wikitext
+++ b/en/t/TRAF.775541.wikitext
@@ -1,3 +1,6 @@
-[[Category:Move to Wiktionary 2007-10]]
+==English==
 
-TRAF is an acronym. it stands for: Toss, Refer, Act, File. It's a principle of organization used to handle any paper that comes across your desk. By either Tossing it (in the garbage), Referring it (to someone else), taking immediate Action upon it, or simply Filing it away, you can save time by not having to keep moving it from pile to pile, causing clutter and reinforcing habits of disorganization.
+==={{acronym}}===
+'''TRAF'''
+
+# [[Toss|toss] [[Refer|refer]] [[Act|act]] [[File|file]]: A principle of organization used to handle any paper that comes across one's desk.
