--- a/en/t/TRAF.775541.wikitext
+++ b/en/t/TRAF.775541.wikitext
@@ -3,4 +3,4 @@
 ==={{acronym}}===
 '''TRAF'''
 
-# [[Toss|toss] [[Refer|refer]] [[Act|act]] [[File|file]]: A principle of organization used to handle any paper that comes across one's desk.
+# [[toss|Toss] [[refer|Refer]] [[act|Act]] [[file|File]]: A principle of organization used to handle any paper that comes across one's desk.
