--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -67,6 +67,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 {{trans-mid}}
 * Italian: {{t+|it|frazione|f}}
 * Japanese: [[分数]] (bunsū)
+* [[Macedonian]]: {{t|mk|дропка|f|tr=dropka|sc=Cyrl}}
 * Polish: {{t+|pl|ułamek|m}}
 * Portuguese: (''Brazil'') [[fração]] {{f}}, (''Portugal'') [[fracção]] {{f}}
 * Russian: {{t|ru|дробь|f|sc=Cyrl}}
