--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -49,6 +49,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 {{trans-mid}}
 * Italian: {{t+|it|frazione|f}}
 * Japanese: [[断片]] (dan-pen)
+* [[Macedonian]]: {{t|mk|дел|m|tr=del|sc=Cyrl}},  {{t|mk|делче|n|tr=delče|sc=Cyrl}}
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: (''Brazil'') [[fração]] {{f}}, (''Portugal'') [[fracção]] {{f}}
 * Russian: {{t+|ru|часть|f|sc=Cyrl}}
