--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -70,6 +70,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * Italian: {{t+|it|frazione|f}}
 * Japanese: [[分数]] (bunsū)
 * [[Macedonian]]: {{t|mk|дропка|f|tr=drópka|sc=Cyrl}}
+* Norwegian: {{t|no|brøk|m}}, {{t|no|fraksjon|m}}
 * Polish: {{t+|pl|ułamek|m}}
 * Portuguese: (''Brazil'') [[fração]] {{f}}, (''Portugal'') [[fracção]] {{f}}
 * Russian: {{t|ru|дробь|f|sc=Cyrl}}
