--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -29,6 +29,7 @@
 * Irish: [[lig fead]]
 * Russian: {{t|ru|свистеть|tr=svist'ét’|sc=Cyrl}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’|sc=Cyrl}} {{pf}}
 * Serbian: {{t|sr|zvižduk|m}}
+* Spanish: {{t|es|silbar}},  {{t|es|chiflar}}
 * Swedish: {{t+|sv|vissla}}
 {{trans-bottom}}
 
