t+es:[[silbato]] t+es:[[pitido]] ([[WT:EDIT|Assisted]]) <whistle#6594033>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -86,7 +86,7 @@
 * Portuguese: {{t|pt|apito|m}}
 * Russian: {{t|ru|свисток|m|tr=svistók|sc=Cyrl}}
 * Serbian: {{t|sr|pištaljka|f}}, {{t-|sr|zviždaljka|f}}, [[zviždalica]] {{f}}, [[pištalica]] {{f}}
-* Spanish: {{t|es|chifle|m}},  {{t|es|pito|m}}
+* Spanish: {{t|es|chifle|m}},  {{t|es|pito|m}},  {{t|es|silbato|m}}
 * Swedish: {{t+|sv|vissla|c}}, {{t+|sv|pipa|c}}, {{t+|sv|visselpipa|c}}
 {{trans-bottom}}
 
@@ -120,7 +120,7 @@
 * Polish: [[gwizd]] {{m}}
 * Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
 * Russian: {{t|ru|свист|m|tr=svist|sc=Cyrl}}
-* Spanish: {{t|es|silbato|m}},  {{t|es|pito|m}}
+* Spanish: {{t|es|silbato|m}},  {{t|es|pito|m}},  {{t|es|pitido}}
 {{trans-bottom}}
 
 {{trans-see|slang: a suit|suit}}
