--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -15,11 +15,11 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 ====Usage notes====
 * The vast majority of words which feature this suffix also have standard ''-ums'' plurals formed by suffixation with the {{term|-s|lang=en}} plural suffix. However, in such situations, the {{term||-s}} suffix morphologically is additional to and separate from the {{term||-um}} suffix.
 
-====See also====
+:p
 {{rel-top5|See also}}
 * [[-a]]
 {{rel-mid5}}
-* [[-ium]]
+whateverrr is the definition of ummmmm! DUHHH!(:
 {{rel-mid5}}
 * [[-on]]
 {{rel-mid5}}
