/* English */ {{trans}} <at the end of one's tether#6602798>

--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -5,4 +5,9 @@
 
 # {{idiom}} At the [[limit]] of one’s [[patience]]; [[frustrated]] or [[annoyed]].
 
+{{trans-top|At the limit of one’s patience}}
+* French: {{t|fr|être au bout du rouleau}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[Category:English prepositional phrases]]
