--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -23,6 +23,8 @@
 *: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
 * '''1720''': William Derham, ''Physico-theology''
 *: After ſome Months, the '''Quack''' gets privately to Town, [...]
+* '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
+*: ’if we are ourselves valets, there shall exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
 
 ====Translations====
 {{trans-top|sound made by a duck}}
