--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -46,6 +46,7 @@ From {{etyl|ang|en}} {{term|weosule||lang=ang}}, cognates in other Germanic lang
 * Japanese: {{t+|ja|飯綱|sc=Jpan}} (いいずな) (īzuna)
 * Korean: {{t-|ko|족제비|sc=Hang}} (jokjebi)
 * Latvian: {{t+|lv|zebiekste|f|xs=Latvian}}
+* Macedonian: {{t-|mk|ласица|f|tr=lásica|sc=Cyrl}}
 * Polish: {{t+|pl|łasica|f}}
 * Russian: {{t+|ru|ласка|f|tr=láska|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|neas|f|xs=Scottish Gaelic}}, {{t-|gd|neas bheag|f|xs=Scottish Gaelic}}
@@ -85,7 +86,6 @@ From {{etyl|ang|en}} {{term|weosule||lang=ang}}, cognates in other Germanic lang
 * {{ttbc|Latin}}: [[mustela#Latin|mustela]]
 * {{ttbc|Lithuanian}}: [[žebenkštis]]
 * {{ttbc|Lower Sorbian}}: [[łasyca]], [[łasycka]]
-* {{ttbc|Macedonian}}: [[ласица]] {{f}}
 * {{ttbc|Maltese}}: [[ballottra]]
 * {{ttbc|Norwegian}}: [[snømus]], [[vesel]]
 * {{ttbc|Occitan}}: [[mostèla]], [[polida]]
