-{{top}} +{{trans-top}}, sorted/rebalanced translations <North African#6609019>

--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -6,11 +6,11 @@
 # Of or pertaining to [[North Africa]]
 
 ====Translations====
-{{top}}
-*Italian: [[nordafricano]]
-{{mid}}
+{{trans-top}}
+* Italian: [[nordafricano]]
+{{trans-mid}}
 * Polish: [[północnoafrykański]] {{m}}
-{{bottom}}
+{{trans-bottom}}
 
 ===Noun===
 {{en-noun|sg=[[north|North]] [[African]]}}
@@ -18,8 +18,7 @@
 # Native or inhabitant of [[North Africa]]
 
 ====Translations====
-{{top}}
-*Italian: [[nordafricano]]
-{{mid}}
-
-{{bottom}}
+{{trans-top}}
+* Italian: [[nordafricano]]
+{{trans-mid}}
+{{trans-bottom}}
