--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -51,4 +51,5 @@ From {{etyl|la|it}} '''[[abacus#Latin|abacus]]''' "[[counting board]]" < {{etyl|
 [[ru:abaco]]
 [[fi:abaco]]
 [[sv:abaco]]
+[[tr:abaco]]
 [[zh:abaco]]
