--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -1,38 +1,54 @@
 ==Dutch==
 
 ===Pronunciation===
-*{{audio|Nl-wassen.ogg|audio}}
+* {{audio|Nl-wassen.ogg|audio}}
 
-===Verb===
+===Etymology 1===
+
+====Verb====
 {{infl|nl|verb|past |[[waste]] or [[wies]]|past participle|[[gewassen]] or [[gewast]]|see conjugation below}}
-# To [[wash]] or [[clean]] (something or oneself).
-# To [[grow]]; to [[rise]]; to [[increase]]; to [[become]] [[high]]er and/or [[big]]ger; to [[wax]].
-#:''De '''wassende''' maan.''
-# To [[rub]] [[wax]] on something.
+# {{transitive}} To [[wash]] or [[clean]] (something or oneself).
 
-====Conjugation====
+=====Conjugation=====
 * {{sense|to wash|to clean}}
 {{nl-verb-table|was|wast|waste|wasten|gewassen}}
 
-* {{sense|to grow|to rise|to increase}}
-{{nl-verb-table|was|wast|wies|wiesen|gewassen}}
-
-* {{sense|to rub wax on something}}
-{{nl-verb-table|was|wast|waste|wasten|gewast}}
-
-====Derived terms====
-{{top4}}
+=====Derived terms=====
+{{top3}}
+* [[wasbeurt]]
+* [[waswater]] {{n}}
 * [[zich wassen]]
 * [[afwassen]]
-* [[gewas]]
-* [[volwassen]]
-* [[wasdom]]
-* [[wassenaar]]
 {{bottom}}
 
-===Adjective===
-'''wassen'''
+===Etymology 2===
+
+====Verb====
+{{nl-verb-table|was|wast|wies|wiesen|gewassen}}
+
+# {{intransitive}} To [[grow]]; to [[rise]]; to [[increase]]; to [[become]] [[high]]er and/or [[big]]ger; to [[wax]].
+#:''De '''wassende''' maan.''
+
+=====Derived terms=====
+* [[gewas]] {{n}}
+* [[volwassen]]
+* [[volwassene]] {{m|f}}
+* [[wasdom]]
+* [[wassenaar]] {{m}}
+
+===Etymology 3===
+
+====Adjective====
+'''wassen''' (''invariable'')
+
 # Made of [[wax]]; [[waxen]].
+
+[[Category:Dutch adjectives]]
+
+====Verb====
+{{nl-verb-table|was|wast|waste|wasten|gewast}}
+
+# {{transitive}} To [[rub]] [[wax]] on something.
 
 [[Category:Dutch weak verbs]]
 
