iwiki +[[:ro:badger]] <badger#6613712>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -150,11 +150,12 @@
 [[nl:badger]]
 [[oc:badger]]
 [[pl:badger]]
+[[ro:badger]]
 [[ru:badger]]
 [[fi:badger]]
 [[sv:badger]]
 [[te:badger]]
 [[th:badger]]
-[[vi:badger]]
 [[tr:badger]]
+[[vi:badger]]
 [[zh:badger]]
