--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -128,6 +128,7 @@ The translations below need to be checked by native speakers and inserted into t
 [[Category:mnk:Reptiles]]
 
 [[ar:bamboo]]
+[[et:bamboo]]
 [[fa:bamboo]]
 [[fr:bamboo]]
 [[io:bamboo]]
@@ -140,7 +141,7 @@ The translations below need to be checked by native speakers and inserted into t
 [[sv:bamboo]]
 [[ta:bamboo]]
 [[te:bamboo]]
-[[vi:bamboo]]
 [[tr:bamboo]]
+[[vi:bamboo]]
 [[vo:bamboo]]
 [[zh:bamboo]]
