Finnish translation <fraction#6615724>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -85,7 +85,13 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 ===Verb===
 {{en-verb}}
 
-# divide or break into fractions.
+# To divide or break into fractions.
+
+====Translations====
+{{trans-top|to divide intio fractions}}
+* Finnish: {{t|fi|fraktioida}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===References===
 * {{R:Dictionary.com|fraction}}
