t+mk:[[бамбус]] ([[WT:EDIT|Assisted]]) <bamboo#6616318>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -40,6 +40,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Italian: {{t-|it|bambù|m}}
 * Japanese: [[竹]] (たけ, take)
 * Lao: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo|xs=Lao}}
+* [[Macedonian]]: {{t|mk|бамбус|m|tr=bámbus|sc=Cyrl}}
 * Malay: [[pokok]] [[buluh]]
 * Portuguese: {{t+|pt|bambu|m}}
 * Russian: {{t+|ru|бамбук|m|sc=Cyrl}}
