--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -94,6 +94,7 @@ The translations below need to be checked by native speakers and inserted into t
 * Italian: di bambù
 {{trans-mid}}
 * Japanese: [[竹製]]の (たけせいの, takesei no)
+* [[Macedonian]]: {{t|mk|бамбусов|m|tr=bámbusov|sc=Cyrl}}
 * Polish: {{t-|pl|bambus|m}}
 * Russian: {{t+|ru|бамбуковый|sc=Cyrl}}
 * Slovene: [[bambusov]] {{m}}, [[bambusova]] {{f}}, [[bambusovo]] {{n}}
