--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -72,6 +72,7 @@
 
 [[ar:cauliflower]]
 [[da:cauliflower]]
+[[et:cauliflower]]
 [[el:cauliflower]]
 [[fr:cauliflower]]
 [[fy:cauliflower]]
@@ -87,6 +88,6 @@
 [[sv:cauliflower]]
 [[ta:cauliflower]]
 [[te:cauliflower]]
-[[vi:cauliflower]]
 [[tr:cauliflower]]
+[[vi:cauliflower]]
 [[zh:cauliflower]]
