--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -103,7 +103,7 @@
 * [[Low Saxon]]: {{t-|nds|Insel|xs=Low Saxon}}
 * [[Lower Sorbian]]: [[kupa]] {{f}}
 * [[Luxembourgish]]: {{t-|lb|Insel|xs=Luxembourgish}}
-* [[Macedonian]]: {{t-|mk|остров|m|sc=Cyrl|xs=Macedonian}}
+* [[Macedonian]]: {{t-|mk|остров|m|tr=óstrov|sc=Cyrl|xs=Macedonian}}
 * [[Malagasy]]: {{t-|mg|nosy|xs=Malagasy}}
 * Malay: {{t-|ms|pulau|xs=Malay}}
 * [[Malayalam]]: [[ദ്വീപ്]]
