t+mk:[[остров]] ([[WT:EDIT|Assisted]]) <island#6627868>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -166,6 +166,7 @@
 * Hungarian: {{t+|hu|sziget}}
 * Japanese: [[島]] ([[しま]], ''shimá'')
 * Latvian: {{t+|lv|sala|f|xs=Latvian}}
+* [[Macedonian]]: {{t|mk|остров|m|tr=óstrov|sc=Cyrl}}
 * Norwegian: {{t+|no|øy|m|f}}
 * Polish: {{t+|pl|wyspa|f}}
 * Russian: {{t+|ru|остров|m|tr=''óstrov''|sc=Cyrl}}
