sorted/rebalanced translations, trans link [[Assamese]] <island#6627951>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -47,7 +47,7 @@
 *: Syriac: [[ܓܙܪܬܐ]] (''gāzartā’'') {{f}}
 *: Hebrew: [[גזרתא]] (''gāzartā’'') {{f}}
 * Armenian: {{t-|hy|կղզի|tr=kġzi|sc=Hayeren|xs=Armenian}}
-* Assamese: {{trreq|Assamese}}
+* [[Assamese]]: {{trreq|Assamese}}
 * [[Asturian]]: {{t+|ast|islla|f|xs=Asturian}}
 * [[Azerbaijani]]: {{fa-Arab|[[آدا]]}}
 * [[Basque]]: {{t-|eu|irla|xs=Basque}}, {{t-|eu|uharte|xs=Basque}}
@@ -162,8 +162,8 @@
 * Finnish: {{t-|fi|saareke}}
 * French: {{t+|fr|île|f}}
 * Hebrew: {{he-translation|אי|i|wv=אִי}} {{m}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|sziget}}
+{{trans-mid}}
 * Japanese: [[島]] ([[しま]], ''shimá'')
 * Latvian: {{t+|lv|sala|f|xs=Latvian}}
 * [[Macedonian]]: {{t|mk|остров|m|tr=óstrov|sc=Cyrl}}
