t+nl:[[getrouwe]] ([[User_talk:Conrad.Irwin/editor.js|Assisted]]) <bosom friend#6629882>

--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -8,6 +8,7 @@
 
 ====Translations====
 {{trans-top|intimate friend}}
+* Dutch: {{t|nl|getrouwe|m|f}}
 * Mandarin: [[知己]] (pinyin: [[zhījǐ]])
 {{trans-mid}}
 * Vietnamese: [[tri kỷ]]
