--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -162,6 +162,7 @@ From the noun ''mill''
 {{trans-top|shape, polish, etc, using a machine}}
 * Dutch: {{t+|nl|slijpen}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|струга|tr=strúga|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|engrave groove around the edge of}}
