--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -57,7 +57,8 @@
 * Japanese: [[製粉所]] (せいふんじょ, seifun jo)
 * Korean: [[방아]] (bang-a); [[방앗간]] (bang-atgan) (''the building'')
 * Kurdish: {{ku-Arab|[[ئاش]]}}
-* [[Macedonian]]: {{t|mk|млин|m|tr=mlin|sc=Cyrl}},  {{t|mk|мелница|f|tr=mélnica|sc=Cyrl}}
+* [[Macedonian]]: {{t|mk|млин|m|tr=mlin|sc=Cyrl}},  {{t|mk|мелница|f|tr=mélnica|sc=Cyrl}},  {{t|mk|мелница|f|tr=mélnica|sc=Cyrl}}
+* [[Macedonian]]: {{t|mk|млин|m|tr=mlin|sc=Cyrl}}
 * Norwegian: {{t-|no|mølle|m}}
 * [[Old High German]]: [[mulin]] {{f}}
 * Polish: {{t+|pl|młyn|m}}
@@ -85,7 +86,8 @@
 * German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general'') [[Papiermühle]] {{f}} (''for paper'')
 * Hebrew: {{he-translation|טחנה|tachánah}}
 {{trans-mid}}
-* [[Macedonian]]: {{t|mk|фабрика|f|tr=fábrika|sc=Cyrl}},  {{t|mk|погон|m|tr=pógon|sc=Cyrl}}
+* [[Macedonian]]: {{t|mk|фабрика|f|tr=fábrika|sc=Cyrl}},  {{t|mk|погон|m|tr=pógon|sc=Cyrl}},  {{t|mk|работилница|f|tr=rabotílnica|sc=Cyrl}},  {{t|mk|фабрика|f|tr=fábrika|sc=Cyrl}}
+* [[Macedonian]]: {{t|mk|погон|m|tr=pógon|sc=Cyrl}}
 * Norwegian: {{t-|no|mølle|m}}
 * Polish: {{t+|pl|fabryka|f}}
 * Portuguese: [[fábrica]] {{f}}, [[manufatura]] {{f}}
@@ -163,6 +165,7 @@ From the noun ''mill''
 {{trans-top|shape, polish, etc, using a machine}}
 * Dutch: {{t+|nl|slijpen}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|струга|tr=strúga|sc=Cyrl}},  {{t|mk|струже|tr=strúže|sc=Cyrl}}
 * [[Macedonian]]: {{t|mk|струга|tr=strúga|sc=Cyrl}}
 {{trans-bottom}}
 
