t+mk:[[се коцка]] ([[WT:EDIT|Assisted]]) <gamble#6634377>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -64,6 +64,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 {{trans-mid}}
 * Hebrew: {{t+|he|להמר|sc=Hebr}}
 * Japanese: [[賭ける]] ([[かける]], ''kakeru'')
+* [[Macedonian]]: {{t|mk|се коцка|tr=se kócka|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|''(transitive)'' to risk something for potential gain}}
