--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -54,6 +54,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 {{trans-mid}}
 * Hebrew: {{t+|he|להמר|sc=Hebr}}
 * Japanese: [[賭ける]] ([[かける]], kakeru)
+* [[Macedonian]]: {{t|mk|се коцка|tr=se kócka|sc=Cyrl}}
 * Portuguese: {{t+|pt|arriscar}}
 {{trans-bottom}}
 
