t+mk:[[коцка]] t+mk:[[комар]] ([[WT:EDIT|Assisted]]) <gamble#6634380>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -22,6 +22,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 * German: {{t+|de|Glücksspiel|n}}
 {{trans-mid}}
 * Japanese: [[賭け]] ([[かけ]], ''kake''), [[ギャンブル]] (''gyanburu'')
+* [[Macedonian]]: {{t|mk|коцка|f|tr=kócka|sc=Cyrl}},  {{t|mk|комар|m|tr=kómar|sc=Cyrl}}
 * Polish: {{t+|pl|hazard|m}}
 {{trans-bottom}}
 
