--- a/en/z/zoolatria.856490.wikitext
+++ b/en/z/zoolatria.856490.wikitext
@@ -1,12 +1,15 @@
 ==Finnish==
 
 ===Noun===
-{{fi-noun}}
+{{infl|fi|noun}}
 
 # [[zoolatry]]
 
+====Declension====
+{{fi-decl-kulkija|zoolatri}}
+
 ====Synonyms====
-*[[eläintenpalvonta]]
+* [[eläintenpalvonta]]
 
 [[fr:zoolatria]]
 [[ru:zoolatria]]
