--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -137,6 +137,15 @@
 
 ----
 
+==Galician==
+
+===Adjective===
+{{gl-adj|f=simple}}
+
+# [[#English|simple]]
+
+----
+
 ==Romanian==
 
 ===Pronunciation===
