--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -10,9 +10,9 @@
 
 ----
 ==German==
-==={{abbreviation}}===
+==={{abbreviation|lang=de}}===
 '''AK'''
-# [[Abendkasse]], an abbreviation often found on concert or event tickets indicating a price that has to be paid at the venue at the evening of the event, as opposed to a presale ticket price
+# [[Abendkasse]], ([[Abend]] + [[Kasse]]) an abbreviation often found on concert or event tickets indicating a price that has to be paid at the venue at the evening of the event, as opposed to a presale ticket price
 
 [[ar:AK]]
 [[de:AK]]
