t+mk:[[карфиол]] ([[WT:EDIT|Assisted]]) <cauliflower#6663283>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -15,6 +15,7 @@
 * Armenian: {{t-|hy|ծաղկակաղամբ|tr=çaġkakaġamb|sc=Armn|xs=Armenian}}
 {{trans-mid}}
 * French: {{t+|fr|chou-fleur|m}}
+* [[Macedonian]]: {{t|mk|карфиол|m|tr=karfiól|sc=Cyrl}}
 {{trans-bottom}}
 {{checktrans-top}}
 * Albanian: [[lulelakër]]
