t+mk:[[Босфор]] ([[WT:EDIT|Assisted]]) <Bosphorus#6664632>

--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -39,6 +39,7 @@
 * Korean: [[보스포루스 해협]] (boseuporuseu haehyeop)
 * Kurdish: [[Tengava Stenbol]]
 * Lithuanian: [[Bosforo sąsiauris]]
+* [[Macedonian]]: {{t|mk|Босфор|m|tr=Bósfor|sc=Cyrl}}
 * [[Occitan]]: [[Bosfòr]] {{m}}
 * Persian: {{fa-Arab|[[تنگه بسفر]]}} (tanga bosfor)
 * Polish: [[Bosfor]] {{m}}
