--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -29,6 +29,7 @@ Used with the definite article {{term|the}}.
 * French: {{t+|fr|Balkans|m}}
 * Hungarian: {{t+|hu|Balkán}}
 {{mid}}
+* [[Macedonian]]: [[Балкан]] (Bálkan) {{m}}
 * Polish: {{t-|pl|Bałkany}}
 * Turkish: {{t+|tr|Balkanlar}}
 {{bottom}}
