iwiki +[[:kl:rot]] <rot#6673295>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -203,6 +203,7 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 [[hy:rot]]
 [[io:rot]]
 [[it:rot]]
+[[kl:rot]]
 [[ky:rot]]
 [[sw:rot]]
 [[ku:rot]]
