--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -72,7 +72,7 @@
 * [[Occitan]]: [[tais]] {{m}}, [[rabàs]] {{m}}
 * Polish: {{t+|pl|borsuk|m}}
 * Portuguese: {{t+|pt|texugo|m}}
-* Romanian: {{t+|ro|viezure|m}}
+* Romanian: {{t+|ro|viezure|m}},  {{t|ro|bursuc|m}}
 * [[Romansch]]: [[tais]]
 * Russian: {{t+|ru|барсук|m|tr=barsuk|sc=Cyrl}}
 * [[Sami]]: [[mievri]]
