t+ht:[[bagay]] t-balance ([[WT:EDIT|Assisted]]) <thing#6684623>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -73,6 +73,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * Greek: {{t+|el|πράγμα|n|tr=prágma|sc=Grek}}
 * [[Guaraní]]: [[mba'e]]
 * [[Gujarati]]: [[વસ્તુ]] (vastu)
+* [[Haitian Creole]]: {{tø|ht|bagay}}
 * Hawaiian: [[mea#Hawaiian|mea]]
 * Hebrew: [[דבר]] (davar) {{m}}
 * Hindi: [[वस्तू]] (vastū) {{m}}, [[चीज़]] (chīz) {{f}}
@@ -81,8 +82,8 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * [[Ido]]: [[kozo]]
 * Indonesian: [[benda]], [[barang]], [[makhluk]]
 * [[Interlingua]]: [[cosa]]
-* Irish: {{t-|ga|rud|m|xs=Irish}}, {{t-|ga|ní|m|xs=Irish}}
 {{trans-mid}}
+* Irish: {{t-|ga|rud|m|xs=Irish}}, {{t-|ga|ní|m|xs=Irish}}
 * Italian: {{t+|it|cosa|f}}
 * Japanese: [[物]] ([[もの]], mono) [[事]] ([[こと]], koto)
 * Korean: [[물건]] (mulgeon)
