--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -13,7 +13,7 @@
 From {{etyl|la|it}} '''[[abacus#Latin|abacus]]''' "[[counting board]]" < {{etyl|grc|it}} '''[[ἄβαξ]]''' {{italbrac|abax}} "[[board]]"
 
 ===Pronunciation===
-/ˈabako/
+*{{IPA|/ˈabako/|lang=it}}
 
 ===Noun===
 {{it-noun|abac|m|o|hi}}
