--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -41,6 +41,7 @@ From the New Testament Greek form of Old Testament [[Zachariah]] and [[Zechariah
 # {{biblical character|lang=de}} [[#English|Zacharias]]
 # {{given name|male|lang=de}}.
 
+[[de:Zacharias]]
 [[no:Zacharias]]
 [[pl:Zacharias]]
 [[ru:Zacharias]]
