--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -50,7 +50,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 {{trans-mid}}
 * Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi o nagasu)
 * [[Khmer]]: {{Khmr|[[ចេញឈាម]]}} (jeuñ chīəum)
-* {{trreq|Korean}}
+* Korean: {{t|ko|피를 흘리다|sc=Kore}}
 * {{trreq|Latin}}
 * {{trreq|Latvian}}
 * {{trreq|Lithuanian}}
