+Czech noun <minimum#6696576>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -52,6 +52,18 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 
 ----
 
+==Czech==
+
+===Noun===
+{{cs-noun|g=}}
+
+# [[#English|minimum]]
+
+====Antonyms====
+* [[maximum]]
+
+----
+
 ==Swedish==
 
 ===Noun===
