--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -75,6 +75,18 @@ MAAHX-im-muhm
 
 ----
 
+==Czech==
+
+===Noun===
+{{cs-noun|g=n}}
+
+# [[#English|maximum]]
+
+====Antonyms====
+* [[minimum]]
+
+----
+
 ==French==
 
 ===Noun===
