--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -92,6 +92,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * Italian: {{t+|it|teoria|f}}
 {{trans-mid}}
 * Japanese: {{t|ja|憶測|tr=okusoku|sc=Jpan}}, {{t|ja|推測|tr=suisoku|sc=Jpan}}, {{t-|ja|推論|tr=suiron|sc=Jpan}}, {{t|ja|見解|tr=kenkai|sc=Jpan}}
+* [[Macedonian]]: {{t|mk|теорија|f|tr=teórija|sc=Cyrl}}
 * Maltese: {{t-|mt|teorija|xs=Maltese}}
 * Norwegian: {{t-|no|teori|m}}
 * Portuguese: {{t+|pt|teoria|f}}
