t+mk:[[теорија]] ([[WT:EDIT|Assisted]]) <theory#6697221>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -128,6 +128,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * Greek: {{t+|el|θεωρία|f|sc=Grek}}
 {{trans-mid}}
 * Japanese: {{t+|ja|理論|tr=riron|sc=Jpan}}, {{t|ja|学説|tr=gakusetsu|sc=Jpan}}
+* [[Macedonian]]: {{t|mk|теорија|f|tr=teórija|sc=Cyrl}}
 * Maltese: {{t-|mt|teorija|xs=Maltese}}
 * Norwegian: {{t-|no|teori|m}}
 * Portuguese: {{t+|pt|teoria|f}}
