t+mk:[[теорија]] ([[WT:EDIT|Assisted]]) <theory#6697223>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -142,6 +142,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * Dutch: {{t+|nl|theorie}}
 * Greek: {{t+|el|θεωρία|f|sc=Grek}}
 * Japanese: {{t-|ja|定理|tr=teiri|sc=Jpan}}, {{t+|ja|理論|tr=riron|sc=Jpan}}, {{t|ja|学説|tr=gakusetsu|sc=Jpan}}
+* [[Macedonian]]: {{t|mk|теорија|f|tr=teórija|sc=Cyrl}}
 * Norwegian: {{t-|no|teori|m}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|teoria|f}}
