--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -160,6 +160,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * Italian: {{t+|it|teoria|f}}
 * Japanese: {{t-|ja|定理|tr=teiri|sc=Jpan}}, {{t+|ja|理論|tr=riron|sc=Jpan}}, {{t|ja|学説|tr=gakusetsu|sc=Jpan}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|теорија|f|tr=teórija|sc=Cyrl}}
 * Maltese: {{t-|mt|teorija|xs=Maltese}}
 * Norwegian: {{t-|no|teori|m}}
 * Portuguese: {{t+|pt|teoria|f}}
