t+mk:[[теорија]] ([[WT:EDIT|Assisted]]) <theory#6697227>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -176,6 +176,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * German: {{t+|de|Theorie|f}}
 * Japanese: {{t-|ja|定理|tr=teiri|sc=Jpan}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|теорија|f|tr=teórija|sc=Cyrl}}
 * Norwegian: {{t-|no|teori|m}}
 * Portuguese: {{t+|pt|teoria|f}}
 * Russian: {{t+|ru|теория|f|tr=t'eórija|sc=Cyrl}}
