--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -66,7 +66,7 @@
 * Latvian: [[āpsis]] {{g|Latvian}}
 * Lithuanian: [[barsùkas]], [[opšrùs]] {{g|Lithuanian}}
 * [[Lower Sorbian]]: [[jazw]], [[šwińc]]
-* [[Macedonian]]: [[jазовец]] (jazovec) {{m}},  {{t|mk|јазовец|m|tr=jázovec|sc=Cyrl}}
+* [[Macedonian]]: {{t|mk|јазовец|m|tr=jázovec|sc=Cyrl}}
 * [[Manx]]: [[broc]]
 * Norwegian: [[grevling]] {{m}}
 * [[Occitan]]: [[tais]] {{m}}, [[rabàs]] {{m}}
