--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -96,6 +96,7 @@
 * French: [[habitant]] {{m}} du Wisconsin
 {{trans-mid}}
 * Italian: [[abitante]] {{m}} dello Wisconsin
+* [[Macedonian]]: {{t|mk|Висконсинец|m|tr=Viskónsinec|sc=Cyrl}},  {{t|mk|Висконсинка|f|tr=Viskónsinka|sc=Cyrl}}
 {{trans-bottom}}
 
 =====See also=====
