--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 {{top}}
 *Finnish: [[Venäjän Sosialistinen Federatiivinen Neuvostotasavalta]].
+* [[Macedonian]]: {{t|mk|Руска Советска Федеративна Социјалистичка Република|f|tr=Rúska Sóvetska Federatívna Socijalístička Repúblika|sc=Cyrl}}
 {{bottom}}
 
 [[Category:Countries]]
