--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -6,6 +6,7 @@
 
 ===Etymology===
 1806 (US), {{compound|American|English}}.  As an adjective, 1892.
+fucking hell
 
 ===Proper noun===
 {{en-proper noun|sg=[[American]] [[English]]}}
