t+cs:[[maximum]] ([[WT:EDIT|Assisted]]) <maximum#6707039>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -39,6 +39,7 @@ MAAHX-im-muhm
 
 {{trans-top|greatest value}}
 * Chinese: [[極]][[大]][[值]] (zuidazhi, zui4da4zhi2)
+* Czech: {{t|cs|maximum|n}}
 * German: {{t+|de|Maximum|n}}
 * Italian: {{t+|it|massimo|m}}
 {{trans-mid}}
