t+hu:[[csapás]] t-balance ([[WT:EDIT|Assisted]]) <blow#6709531>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -193,8 +193,9 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 * Dutch: {{t+|nl|slag|m}}
 * Finnish: {{t+|fi|isku}}
 * French: {{t+|fr|coup|m}}
-{{trans-mid}}
 * German: {{t+|de|Schlag|m}}
+{{trans-mid}}
+* Hungarian: {{t|hu|csapás}}
 * Italian: {{t+|it|botta|f}}
 * Russian: {{t+|ru|удар|m|tr=udár|sc=Cyrl}}
 * [[Telugu]]: [[దెబ్బ]]
