--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -196,7 +196,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 * German: {{t+|de|Schlag|m}}
 {{trans-mid}}
 * Hungarian: {{t|hu|csapás}}
-* Italian: {{t+|it|botta|f}}
+* Italian: {{t+|it|botta|f}},  {{t|it|colpo|m}}
 * Russian: {{t+|ru|удар|m|tr=udár|sc=Cyrl}}
 * [[Telugu]]: [[దెబ్బ]]
 {{trans-bottom}}
