t+it:[[soffiare]] t-balance ([[WT:EDIT|Assisted]]) <blow#6709553>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -54,8 +54,9 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 * French: {{t+|fr|souffler}}
 * German: {{t+|de|blasen}}, {{t+|de|pusten}}, {{t+|de|wehen}}
 * Hungarian: {{t+|hu|fúj}}
-* Japanese: [[吹く]] ([[ふく]], fuku)
+* Italian: {{t|it|soffiare}}
 {{trans-mid}}
+* Japanese: [[吹く]] ([[ふく]], fuku)
 * Korean: [[불다]] (bulda)
 * Kurdish: {{ku-Arab|[[فو]]}}
 * Polish: {{t+|pl|dmuchać}}
