/* Noun */ stats <minimum#6712090>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -15,9 +15,13 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 #: ''He always tries to get away with doing the '''minimum'''.''
 # {{astronomy}} A period of minimum [[brightness]] or [[energy]] [[intensity]] (of a [[star]]).
 #: ''The Maunder '''minimum''' of the Sun reportedly corresponded to a period of great cold on Earth.''
+# {{statistics}} The smallest member of a [[batch]] or [[sample]] or the lower bound of a [[frequency distribution]].
 
 ====Antonyms====
 * [[maximum]]
+
+====Hypernyms====
+*{{sense|statistics}} [[measure of location]]
 
 ====Derived terms====
 {{rel-top|terms derived from minimum}}
