--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -15,6 +15,10 @@ MAAHX-im-muhm
 
 # The [[high|highest]] [[limit]].
 # {{mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, esp. the [[global maximum]] or a [[local maximum]] of a [[function]].
+# {{statistics}} The largest value of a [[batch]] or [[sample]] or the upper bound of a [[probability distribution]].
+
+====Hypernyms====
+*{{sense|statistics}} [[measure of location]]
 
 ====Synonyms====
 * [[max]]
