--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -15,7 +15,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 #: ''He always tries to get away with doing the '''minimum'''.''
 # {{astronomy}} A period of minimum [[brightness]] or [[energy]] [[intensity]] (of a [[star]]).
 #: ''The Maunder '''minimum''' of the Sun reportedly corresponded to a period of great cold on Earth.''
-# {{statistics}} The smallest member of a [[batch]] or [[sample]] or the lower bound of a [[frequency distribution]].
+# {{statistics}} The smallest member of a [[batch]] or [[sample]] or the lower bound of a [[probability distribution]].
 
 ====Usage notes====
 * {{term|minima|Minima}} is more common for the technical senses.
