--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -17,6 +17,9 @@ MAAHX-im-muhm
 # {{mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, esp. the [[global maximum]] or a [[local maximum]] of a [[function]].
 # {{statistics}} The largest value of a [[batch]] or [[sample]] or the upper bound of a [[probability distribution]].
 
+====Usage notes====
+* {{term|maxima|Maxima}} is more common plural for the technical senses.
+
 ====Hypernyms====
 *{{sense|statistics}} [[measure of location]]
 
