trans link [[Nahuatl]] <again#6714238>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -74,7 +74,7 @@
 * Maltese: [[darb' oħra]]
 * {{trreq|Maori}}
 * {{trreq|Mongolian}}
-* Nahuatl: {{t-|nah|occeppa|xs=Nahuatl}}
+* [[Nahuatl]]: {{t-|nah|occeppa|xs=Nahuatl}}
 * Norwegian: {{t+|no|igjen}}
 * Persian: {{fa-Arab|[[دگربار]]}}
 * Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
