t+eo:[[ĝustigo]] ([[WT:EDIT|Assisted]]) <adjustment#6714924>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -29,7 +29,7 @@
 * {{trreq|Catalan}}
 * Danish: {{t|da|justering|c}}, {{t|da|tilpasning|c}}
 * Dutch: [[aanpassing]] {{f}}, [[bijregeling]] {{f}}
-* Esperanto: {{t|eo|adapto}},  {{t|eo|akomodo}},  {{t|eo|alĝustigo}}
+* Esperanto: {{t|eo|adapto}},  {{t|eo|akomodo}},  {{t|eo|alĝustigo}},  {{t|eo|ĝustigo}}
 * Finnish: [[säätö]], [[hienosäätö]]
 * French: [[ajustement]] {{m}}, [[arèglement]] {{m}}
 * German: {{t+|de|Anpassung|f}}
