t+haw:[[Zakaria]] t-balance ([[WT:EDIT|Assisted]]) <Zacharias#6717794>

--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -14,8 +14,9 @@ From the New Testament Greek form of Old Testament [[Zachariah]] and [[Zechariah
 * Danish: [[Zakarias]]
 * Finnish: [[Sakarias]]
 * French: [[Zacharie]]
-{{trans-mid}}
 * German: [[#German|Zacharias]]
+{{trans-mid}}
+* Hawaiian: {{tø|haw|Zakaria}}
 * Norwegian: [[Sakarja]]
 * Swedish: [[Sakarias]]
 {{trans-bottom}}
