--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -282,7 +282,7 @@ From {{etyl|ang}} {{term|blawan|blāwan|make an air current, sound a wind instru
 [[zh:blow]]
 
 ===Etymology 2===
-{{etyl|enm}} ''blowe'', ''blaw''. Akin to {{etyl|goh}} ''[[bliuwan]]'' "to beat, strike" ({{etyl|ger}} ''[[bläuen]]''), Gothic ''bliggwan''.
+{{etyl|enm}} ''blowe'', ''blaw''. Akin to {{etyl|goh}} ''[[bliuwan]]'' "to beat, strike" ({{etyl|deu}} ''[[bläuen]]''), Gothic ''bliggwan''.
 
 ====Noun====
 {{en-noun}}
