--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -307,7 +307,7 @@ From {{etyl|ang}} {{term|blawan|blāwan|make an air current, sound a wind instru
 # to [[blossom]]; to cause to bloom or blossom
 
 ====Noun====
-{{en-noun|blow}}
+{{en-noun}}
 
 # a display or yield of flowers
 # a display of anything brilliant or bright
