--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -305,6 +305,7 @@ From {{etyl|ang}} {{term|blawan|blāwan|make an air current, sound a wind instru
 {{infl|en|verb|cat=verbs|head=blow}}
 
 # to [[blossom]]; to cause to bloom or blossom
+#: ''How blows the citron grove. --Milton. ''
 
 ====Noun====
 {{en-noun}}
