--- a/en/g/go by the board.746590.wikitext
+++ b/en/g/go by the board.746590.wikitext
@@ -3,7 +3,7 @@
 ===Verb===
 {{infl|en|verb|head=[[go]] [[by]] [[the]] [[board]]}}
 
-# {{nautical|dated}} To estimate the velocity of a boat or ship in [[knots]] by casting [[overboard]] the knotted line to whose end is attached the [[lead]] and thereafter counting the knots in the line as it goes aft along the side boards of the vessel. 
+# {{rfv-sense}} {{nautical|dated}} To estimate the velocity of a boat or ship in [[knots]] by casting [[overboard]] the knotted line to whose end is attached the [[lead]] and thereafter counting the knots in the line as it goes aft along the side boards of the vessel. 
 # {{idiom|nautical}} To [[fall]] or to go [[overboard]]; to be [[cast]] over the side of a [[ship]].
 # {{idiom}} To be [[superseded]], [[rejected]], or [[obliterated]]; to pass by with little consequence; to amount to [[nothing]].
 
