t+el:[[θεωρία]] ([[WT:EDIT|Assisted]]) <theory#6724522>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -157,6 +157,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * Finnish: {{t-|fi|teoria}}
 * French: {{t+|fr|théorie|f}}
 * German: {{t+|de|Theorie|f}}
+* Greek: {{t|el|θεωρία|f|sc=Grek}}
 * Italian: {{t+|it|teoria|f}}
 * Japanese: {{t-|ja|定理|tr=teiri|sc=Jpan}}, {{t+|ja|理論|tr=riron|sc=Jpan}}, {{t|ja|学説|tr=gakusetsu|sc=Jpan}}
 {{trans-mid}}
