--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -64,6 +64,7 @@ Morphemes: [[abandon-]] + [[-o]](2).
 [[ia:abandono]]
 [[it:abandono]]
 [[lt:abandono]]
+[[no:abandono]]
 [[pl:abandono]]
 [[pt:abandono]]
 [[ru:abandono]]
