--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -26,6 +26,9 @@
 * '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
 *: ‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
 
+====Synonyms====
+* See also [[Wikisaurus:deceiver]]
+
 ====Translations====
 {{trans-top|sound made by a duck}}
 * Dutch: {{t+|nl|kwak}}
