+translation paragraph <inextinguishable#6734726>

--- a/en/i/inextinguishable.742115.wikitext
+++ b/en/i/inextinguishable.742115.wikitext
@@ -5,6 +5,13 @@
 
 # Incapable of being [[extinguish]]ed
 
+
+====Translations====
+{{trans-top|incapable of being extinguished}}
+* Italian: {{t|it|inestinguibile}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[fa:inextinguishable]]
 [[io:inextinguishable]]
 [[te:inextinguishable]]
