t+nv:[[-di]] t-balance ([[WT:EDIT|Assisted]]) <at#6737017>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -60,9 +60,10 @@
 * Italian: [[a#Italian|a]], [[in#Italian|in]]
 * Japanese: [[で]] (de), [[に]] (ni)
 * Korean: [[~에서]] (~eseo)
-{{trans-mid}}
 * Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
+{{trans-mid}}
 * Latin: ''[[locative case]]''
+* Navajo: {{tø|nv|-di}}
 * Norwegian: [[på]]
 * [[Novial]]: [[che]], [[an]], [[sur]]
 * Persian: {{fa-Arab|[[در|دَر]]}} (dær)
