--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -49,6 +49,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * German: {{t+|de|Blase|f}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|меурче|n|tr=méurče|sc=Cyrl}}
 * Portuguese: {{t-|pt|bolha|f}}
 * Russian: {{tr|ru|пузырёк|m|sc=Cyrl|tr=puzyr'ók}}
 * [[Telugu]]: {{t|te|బుడగ|tr=buDaga|sc=Telu}}
