--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -60,6 +60,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * German: {{t+|de|Blase|f}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|меур|m|tr=méur|sc=Cyrl}}
 * Portuguese: {{t-|pt|bolha|f}}
 * Russian: {{t|ru|пузырь|m|tr=puzýr'|sc=Cyrl}}, {{t|ru|пузырёк|m|tr=puzyr'ók|sc=Cyrl}}
 * [[Telugu]]: {{t|te|బుడగ|tr=buDaga|sc=Telu}}
